<resources>
    <string name="app_name">ETCB</string>
    <string name="etcb">ETBC</string>
    <string name="nav_mine">me</string>
    <string name="nav_book">loft</string>
    <string name="nav_attic">attic</string>
    <string name="daily_today">- Daily -</string>
    <string name="random_flow_book">RandomFlow</string>
    <string name="userName">user name</string>
    <string name="tel">tel: 18870742111</string>
    <string name="fork">fork</string>
    <string name="car">Car</string>
    <string name="pay">Pay</string>
    <string name="message">message</string>
    <string name="micro">micro</string>
    <string name="goods">goods</string>
    <string name="upload_book">bookModelView</string>
    <string name="live">live</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="more">more</string>
    <string name="one_book">Republic</string>
    <string name="jane_eyre">Jane Eyre</string>
    <string name="description">Jane Eyre is the representative work of British woman writer Charlotte Bronte. The heroine Jane Eyre is a female intellectual image that pursues equality and autonomy. The novel wins with a touching sacred history of a "Cinderella-style" character.
        "Jane Eyre" is also a representative work of female literature.</string>
    <string name="kevin">kevin</string>
    <string name="price">88 $</string>
    <string name="Books">Books</string>
    <string name="books">books</string>
    <string name="title">title</string>
    <string name="subTitle">subTitle</string>
    <string name="time">18:00</string>
    <string name="quiet_mode">Quiet Mode</string>
    <string name="black_surface">Black Surface</string>
    <string name="surface">Surface</string>
    <string name="language">Language</string>
    <string name="about_me">About Me</string>
    <string name="feedback">Feedback</string>
    <string name="switch_account">Switch Account</string>
    <string name="quit">Quit</string>
    <string name="avatar">Avatar</string>
    <string name="profile">Profile</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="sex" >Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cancel">Cancel</string>
    <string name="alipay">Alipay</string>
    <string name="bind_state">Not Bind</string>
    <string name="collect_count">1.5 w</string>
    <string name="bookName">name</string>
    <string name="bookCount">count</string>
    <string name="bookPrice">price</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="signUp">SignUp</string>
    <string name="phoneHint">intput phone</string>
    <string name="psdHint">password</string>
    <string name="forget_password">forget code?</string>
    <string name="login_by_code">login by code</string>
    <string name="rePsdHint">reInput</string>
    <string name="count">COUNT:</string>
    <string name="book_title">Book Title</string>
    <string name="up_video">up video</string>
    <string name="bookDescription">Description</string>
    <string name="author">author</string>
    <string name="details">Details</string>
    <string name="label_chat_edit_hint">input text</string>
    <string name="del">Del</string>
    <string name="sum">Sum：</string>
    <string name="all">ALL</string>
    <string name="data_rsp_error_unknown" > response error unknown </string>
    <string name="login_code">verification code</string>
    <string name="send">Send</string>
    <string name="save">save</string>
    <string name="modify">Modify</string>
    <string name="upper">upper</string>
    <string name="shop_center">SHOP CENTER</string>
    <string name="count_goods">1</string>
    <string name="Goods">Goods</string>
    <string name="type">type</string>
    <string name="price_0">0 $</string>
    <string name="manager">manager</string>
    <string name="hint_book_info">info details( can\'t over 300 words)</string>
    <string name="ack">ACK</string>
    <string name="clear">Clear</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="english">English</string>
</resources>
