<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingLeft="@dimen/len_15"
    android:paddingRight="@dimen/len_15"
    android:paddingBottom="@dimen/len_20">

    <RelativeLayout
        style="@style/account_rl">

        <ImageView
            style="@style/account_image"
            android:contentDescription="@string/micro"
            android:src="@drawable/account_phone" />

        <EditText
            android:id="@+id/et_phone"
            style="@style/account_text"
            android:background="@drawable/mine_do_border"
            android:hint="@string/phoneHint" />

    </RelativeLayout>


    <RelativeLayout
        style="@style/account_rl">

        <ImageView
            style="@style/account_image"
            android:contentDescription="@string/micro"
            android:src="@drawable/account_psd" />

        <EditText
            android:id="@+id/et_psd"
            style="@style/account_text"
            android:background="@drawable/mine_do_border"
            android:hint="@string/psdHint" />

    </RelativeLayout>


    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="match_parent"
        android:layout_height="@dimen/len_40"
        android:paddingLeft="@dimen/len_20"
        android:text="@string/forget_password"
        android:layout_gravity="center"
        android:gravity="center_vertical|end"
        android:textColor="@color/etcb"/>

</LinearLayout>