<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/len_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionBarSize2"
            android:background="@color/whiteGrayLess"
            app:theme="@style/myToolBar"
            android:paddingTop="@dimen/statusBarSize"
            app:title="@string/settings" />

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/cv_quiet_mode"
        style="@style/mine_do_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:ignore="MissingConstraints">

        <TextView
            android:background="@drawable/mine_do_border"
            android:layout_marginLeft="@dimen/len_20"
            android:layout_marginStart="@dimen/len_20"
            style="@style/mine_do_text"
            android:text="@string/quiet_mode"
            tools:ignore="RtlSymmetry" />

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/cv_black_surface"
        style="@style/mine_do_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_quiet_mode"
        tools:ignore="MissingConstraints">

        <TextView
            android:background="@drawable/mine_do_border"
            android:layout_marginLeft="@dimen/len_20"
            style="@style/mine_do_text"
            android:drawableRight="@drawable/settings_sun"
            android:drawableEnd="@drawable/settings_sun"
            android:text="@string/surface"
            tools:ignore="RtlSymmetry"
            android:layout_marginStart="@dimen/len_20" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_language"
        style="@style/mine_do_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_black_surface"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_marginLeft="@dimen/len_20"
            style="@style/mine_do_text"
            android:text="@string/language"
            tools:ignore="RtlSymmetry"
            android:layout_marginStart="@dimen/len_20" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_about"
        style="@style/mine_do_card"
        android:layout_marginTop="@dimen/len_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_language"
        tools:ignore="MissingConstraints">

        <TextView
            android:background="@drawable/mine_do_border"
            android:layout_marginLeft="@dimen/len_20"
            style="@style/mine_do_text"
            android:text="@string/about_me"
            tools:ignore="RtlSymmetry"
            android:layout_marginStart="@dimen/len_20" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_feedback"
        style="@style/mine_do_card"
        android:background="@drawable/mine_do_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_about"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/mine_do_text"
            android:layout_marginStart="@dimen/len_20"
            android:layout_marginLeft="@dimen/len_20"
            android:text="@string/feedback"
            tools:ignore="RtlSymmetry" />

    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:id="@+id/cv_quit"
        style="@style/mine_do_card"
        android:layout_marginTop="@dimen/len_20"
        android:background="@drawable/mine_do_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_feedback"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/len_20"
            android:textSize="@dimen/font_16"
            android:gravity="center"
            android:text="@string/quit"
            tools:ignore="RtlSymmetry"
            android:layout_marginStart="@dimen/len_20"  />

    </android.support.v7.widget.CardView>



</android.support.constraint.ConstraintLayout>